refactor: remove unused identity organization
