# docs/swagger.yaml
@@ -56,26 +56,6 @@ definitions:
     - code
     - name
     type: object
-  dto.CreateIdentityOrganizationPayloadDTO:
-    properties:
-      authenticate_url:
-        type: string
-      code:
-        type: string
-      description:
-        type: string
-      name:
-        type: string
-      parent_id:
-        type: string
-      self_authenticate:
-        type: boolean
-    required:
-    - authenticate_url
-    - code
-    - name
-    - self_authenticate
-    type: object
   dto.CreateIdentityRolePayloadDTO:
     properties:
       code:
@@ -133,25 +113,6 @@ definitions:
   dto.IdentityGroupDTO:
     properties:
       id:
-        type: string
-    type: object
-  dto.IdentityOrganizationDTO:
-    properties:
-      authenticate_url:
-        type: string
-      code:
-        type: string
-      created_at:
-        type: string
-      description:
-        type: string
-      id:
-        type: string
-      name:
-        type: string
-      self_authenticate:
-        type: boolean
-      updated_at:
         type: string
     type: object
   dto.IdentityRoleDTO:
@@ -299,26 +260,6 @@ definitions:
     required:
     - code
     - name
-    type: object
-  dto.UpdateIdentityOrganizationPayloadDTO:
-    properties:
-      authenticate_url:
-        type: string
-      code:
-        type: string
-      description:
-        type: string
-      name:
-        type: string
-      parent_id:
-        type: string
-      self_authenticate:
-        type: boolean
-    required:
-    - authenticate_url
-    - code
-    - name
-    - self_authenticate
     type: object
   dto.UpdateIdentityRolePayloadDTO:
     properties:
@@ -593,207 +534,6 @@ paths:
       summary: Update an existing group
       tags:
       - groups
-  /api/v1/organizations:
-    get:
-      consumes:
-      - application/json
-      description: Get organizations
-      parameters:
-      - description: Organization ID
-        in: header
-        name: X-Organization-Id
-        required: true
-        type: string
-      - description: Bearer Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Page number
-        in: query
-        name: page
-        type: integer
-      - description: Page size
-        in: query
-        name: size
-        type: integer
-      - description: Keyword
-        in: query
-        name: keyword
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successful retrieval of organizations
-          schema:
-            $ref: '#/definitions/dto.PaginationDTOResponse'
-        "400":
-          description: Invalid page number or size
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-      summary: Retrieve organizations
-      tags:
-      - organizations
-    post:
-      consumes:
-      - application/json
-      description: Create a new organization
-      parameters:
-      - description: Organization ID
-        in: header
-        name: X-Organization-Id
-        required: true
-        type: string
-      - description: Bearer Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: organization payload
-        in: body
-        name: organization
-        required: true
-        schema:
-          $ref: '#/definitions/dto.CreateIdentityOrganizationPayloadDTO'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Successful creation of organization
-          schema:
-            $ref: '#/definitions/dto.IdentityOrganizationDTO'
-        "400":
-          description: Invalid request payload
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-      summary: Create a new organization
-      tags:
-      - organizations
-  /api/v1/organizations/{organization_id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete an existing organization
-      parameters:
-      - description: Organization ID
-        in: header
-        name: X-Organization-Id
-        required: true
-        type: string
-      - description: Bearer Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: Successful deletion of organization
-        "400":
-          description: Invalid request ID
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "404":
-          description: organization not found
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-      summary: Delete an existing organization
-      tags:
-      - organizations
-    get:
-      consumes:
-      - application/json
-      description: Get organization by ID
-      parameters:
-      - description: Organization ID
-        in: header
-        name: X-Organization-Id
-        required: true
-        type: string
-      - description: Bearer Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successful retrieval of organization
-          schema:
-            $ref: '#/definitions/dto.IdentityOrganizationDTO'
-        "400":
-          description: Invalid request ID
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "404":
-          description: organization not found
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-      summary: Retrieve organization by ID
-      tags:
-      - organizations
-    put:
-      consumes:
-      - application/json
-      description: Update an existing organization
-      parameters:
-      - description: Organization ID
-        in: header
-        name: X-Organization-Id
-        required: true
-        type: string
-      - description: Bearer Token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: organization payload
-        in: body
-        name: organization
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UpdateIdentityOrganizationPayloadDTO'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successful update of organization
-          schema:
-            $ref: '#/definitions/dto.IdentityOrganizationDTO'
-        "400":
-          description: Invalid request payload
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "404":
-          description: organization not found
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-      summary: Update an existing organization
-      tags:
-      - organizations
   /api/v1/permissions:
     get:
       consumes:
