# internal/delivery/http/route/v1.go
@@ -17,44 +17,9 @@ func RegisterRoutes(
 	r *gin.Engine,
 	config *conf.Configuration,
 	db *gorm.DB,
-	organizationUCase interfaces.IdentityOrganizationUseCase,
 	userUCase interfaces.IdentityUserUseCase,
 ) {
 	v1 := r.Group("/api/v1")
-
-	// SECTION: organizations
-	organizationRouter := v1.Group("organizations")
-	organizationHandler := handlers.NewIdentityOrganizationHandler(organizationUCase)
-	organizationRouter.GET(
-		"/",
-		middleware.RequestAuthenticationMiddleware(),
-		middleware.RequestAuthorizationMiddleware("iam:identity_organization:read"),
-		organizationHandler.GetOrganizations,
-	)
-	organizationRouter.GET(
-		"/:organization_id",
-		middleware.RequestAuthenticationMiddleware(),
-		middleware.RequestAuthorizationMiddleware("iam:identity_organization:read"),
-		organizationHandler.GetDetail,
-	)
-	organizationRouter.POST(
-		"/",
-		middleware.RequestAuthenticationMiddleware(),
-		middleware.RequestAuthorizationMiddleware("iam:identity_organization:create"),
-		organizationHandler.CreateOrganization,
-	)
-	organizationRouter.PUT(
-		"/:organization_id",
-		middleware.RequestAuthenticationMiddleware(),
-		middleware.RequestAuthorizationMiddleware("iam:identity_organization:update"),
-		organizationHandler.UpdateOrganization,
-	)
-	organizationRouter.DELETE(
-		"/:organization_id",
-		middleware.RequestAuthenticationMiddleware(),
-		middleware.RequestAuthorizationMiddleware("iam:identity_organization:delete"),
-		organizationHandler.DeleteOrganization,
-	)
 
 	// SECTION: organizations
 	userRouter := v1.Group("users")
